@@ -27,6 +27,10 @@ import org.opensearch.core.index.Index;
 import org.opensearch.core.index.shard.ShardId;
 import org.opensearch.index.IndexService;
 import org.opensearch.index.shard.IndexShard;
+import org.opensearch.index.store.RemoteDirectory;
+import org.opensearch.index.store.RemoteSegmentStoreDirectory;
+import org.opensearch.index.store.Store;
+import org.opensearch.index.store.lockmanager.RemoteStoreLockManager;
 import org.opensearch.indices.IndicesService;
 import org.opensearch.indices.recovery.RecoverySettings;
 import org.opensearch.indices.recovery.RecoveryState;
@@ -38,7 +42,10 @@ import org.opensearch.threadpool.TestThreadPool;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportService;
 
+import java.io.IOException;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static org.opensearch.index.remote.RemoteStoreTestsHelper.createIndexSettings;
@@ -51,7 +58,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
+public class RemoteStorePublishMergedSegmentActionTests extends OpenSearchTestCase {
 
     private ThreadPool threadPool;
     private CapturingTransport transport;
@@ -115,10 +122,11 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
         when(indexShard.getPendingPrimaryTerm()).thenReturn(1L);
         when(indexShard.recoveryState()).thenReturn(recoveryState);
         when(indexShard.getRecoverySettings()).thenReturn(recoverySettings);
+        when(indexShard.store()).thenReturn(mock(Store.class));
 
         final SegmentReplicationTargetService mockTargetService = mock(SegmentReplicationTargetService.class);
 
-        final PublishMergedSegmentAction action = new PublishMergedSegmentAction(
+        final RemoteStorePublishMergedSegmentAction action = new RemoteStorePublishMergedSegmentAction(
             Settings.EMPTY,
             transportService,
             clusterService,
@@ -157,7 +165,7 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
 
         final SegmentReplicationTargetService mockTargetService = mock(SegmentReplicationTargetService.class);
 
-        final PublishMergedSegmentAction action = new PublishMergedSegmentAction(
+        final RemoteStorePublishMergedSegmentAction action = new RemoteStorePublishMergedSegmentAction(
             Settings.EMPTY,
             transportService,
             clusterService,
@@ -168,15 +176,11 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
             mockTargetService
         );
 
-        final MergedSegmentCheckpoint checkpoint = new MergedSegmentCheckpoint(
-            indexShard.shardId(),
-            1,
-            1111,
-            Codec.getDefault().getName(),
-            Collections.emptyMap(),
-            "_1"
+        final RemoteStoreMergedSegmentCheckpoint checkpoint = new RemoteStoreMergedSegmentCheckpoint(
+            new MergedSegmentCheckpoint(indexShard.shardId(), 1, 1111, Codec.getDefault().getName(), Collections.emptyMap(), "_1"),
+            Map.of("_1", "_1__uuid")
         );
-        final PublishMergedSegmentRequest request = new PublishMergedSegmentRequest(checkpoint);
+        final RemoteStorePublishMergedSegmentRequest request = new RemoteStorePublishMergedSegmentRequest(checkpoint);
 
         action.shardOperationOnPrimary(request, indexShard, ActionTestUtils.assertNoFailureListener(result -> {
             // we should forward the request containing the current publish checkpoint to the replica
@@ -184,7 +188,7 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
         }));
     }
 
-    public void testPublishMergedSegmentActionOnReplica() {
+    public void testPublishMergedSegmentActionOnReplica() throws IOException {
         final IndicesService indicesService = mock(IndicesService.class);
 
         final Index index = new Index("index", "uuid");
@@ -193,15 +197,29 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
         final int id = randomIntBetween(0, 4);
         final IndexShard indexShard = mock(IndexShard.class);
         when(indexService.getShard(id)).thenReturn(indexShard);
-
         final ShardId shardId = new ShardId(index, id);
+        final RemoteSegmentStoreDirectory remoteDirectory = new RemoteSegmentStoreDirectory(
+            mock(RemoteDirectory.class),
+            mock(RemoteDirectory.class),
+            mock(RemoteStoreLockManager.class),
+            threadPool,
+            shardId,
+            new HashMap<>()
+        );
         when(indexShard.shardId()).thenReturn(shardId);
         when(indexShard.indexSettings()).thenReturn(
-            createIndexSettings(false, Settings.builder().put(IndexMetadata.INDEX_REPLICATION_TYPE_SETTING.getKey(), "SEGMENT").build())
+            createIndexSettings(
+                true,
+                Settings.builder()
+                    .put(IndexMetadata.INDEX_REPLICATION_TYPE_SETTING.getKey(), "SEGMENT")
+                    .put(IndexMetadata.INDEX_REMOTE_STORE_ENABLED_SETTING.getKey(), true)
+                    .build()
+            )
         );
+        when(indexShard.getRemoteDirectory()).thenReturn(remoteDirectory);
         final SegmentReplicationTargetService mockTargetService = mock(SegmentReplicationTargetService.class);
 
-        final PublishMergedSegmentAction action = new PublishMergedSegmentAction(
+        final RemoteStorePublishMergedSegmentAction action = new RemoteStorePublishMergedSegmentAction(
             Settings.EMPTY,
             transportService,
             clusterService,
@@ -212,16 +230,9 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
             mockTargetService
         );
 
-        final MergedSegmentCheckpoint checkpoint = new MergedSegmentCheckpoint(
-            indexShard.shardId(),
-            1,
-            1111,
-            Codec.getDefault().getName(),
-            Collections.emptyMap(),
-            "_1"
-        );
+        final RemoteStoreMergedSegmentCheckpoint checkpoint = createCheckpoint(indexShard);
 
-        final PublishMergedSegmentRequest request = new PublishMergedSegmentRequest(checkpoint);
+        final RemoteStorePublishMergedSegmentRequest request = new RemoteStorePublishMergedSegmentRequest(checkpoint);
 
         final PlainActionFuture<TransportReplicationAction.ReplicaResult> listener = PlainActionFuture.newFuture();
         action.shardOperationOnReplica(request, indexShard, listener);
@@ -252,7 +263,7 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
         when(indexShard.indexSettings()).thenReturn(createIndexSettings(false));
         final SegmentReplicationTargetService mockTargetService = mock(SegmentReplicationTargetService.class);
 
-        final PublishMergedSegmentAction action = new PublishMergedSegmentAction(
+        final RemoteStorePublishMergedSegmentAction action = new RemoteStorePublishMergedSegmentAction(
             Settings.EMPTY,
             transportService,
             clusterService,
@@ -263,16 +274,9 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
             mockTargetService
         );
 
-        final MergedSegmentCheckpoint checkpoint = new MergedSegmentCheckpoint(
-            indexShard.shardId(),
-            1,
-            1111,
-            Codec.getDefault().getName(),
-            Collections.emptyMap(),
-            "_1"
-        );
+        final RemoteStoreMergedSegmentCheckpoint checkpoint = createCheckpoint(indexShard);
 
-        final PublishMergedSegmentRequest request = new PublishMergedSegmentRequest(checkpoint);
+        final RemoteStorePublishMergedSegmentRequest request = new RemoteStorePublishMergedSegmentRequest(checkpoint);
 
         final PlainActionFuture<TransportReplicationAction.ReplicaResult> listener = PlainActionFuture.newFuture();
         action.shardOperationOnReplica(request, indexShard, listener);
@@ -286,21 +290,14 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
     }
 
     public void testGetReplicationModeWithRemoteTranslog() {
-        final PublishMergedSegmentAction action = createAction();
+        final RemoteStorePublishMergedSegmentAction action = createAction();
         final IndexShard indexShard = mock(IndexShard.class);
         when(indexShard.indexSettings()).thenReturn(createIndexSettings(true));
         assertEquals(ReplicationMode.FULL_REPLICATION, action.getReplicationMode(indexShard));
     }
 
-    public void testGetReplicationModeWithLocalTranslog() {
-        final PublishMergedSegmentAction action = createAction();
-        final IndexShard indexShard = mock(IndexShard.class);
-        when(indexShard.indexSettings()).thenReturn(createIndexSettings(false));
-        assertEquals(ReplicationMode.FULL_REPLICATION, action.getReplicationMode(indexShard));
-    }
-
-    private PublishMergedSegmentAction createAction() {
-        return new PublishMergedSegmentAction(
+    private RemoteStorePublishMergedSegmentAction createAction() {
+        return new RemoteStorePublishMergedSegmentAction(
             Settings.EMPTY,
             transportService,
             clusterService,
@@ -312,4 +309,10 @@ public class PublishMergedSegmentActionTests extends OpenSearchTestCase {
         );
     }
 
+    private RemoteStoreMergedSegmentCheckpoint createCheckpoint(IndexShard indexShard) {
+        return new RemoteStoreMergedSegmentCheckpoint(
+            new MergedSegmentCheckpoint(indexShard.shardId(), 1, 1111, Codec.getDefault().getName(), Collections.emptyMap(), "_1"),
+            Map.of("_1", "_1__uuid")
+        );
+    }
 }
